flux/infrastructure/controllers/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    # node-exporter and promtail require hostNetwork, hostPID, hostPath volumes
    pod-security.kubernetes.io/enforce: privileged
